# agentcore-based-langGraph-agent-for-arxiv-research

./: .gitignore  readme.md
aws-agentcore/: Dockerfile  agent_deploy.py  aws_ecr_push.py  fetch_access_token.py  langgraph-agent-main.py  prompts.py  pyproject.toml  readme.md
backend/: auth.py  fastapi_mediator_service.py  requirements.txt
frontend-react-ts/: index.html  package-lock.json  package.json
frontend-react-ts/src/: App.tsx
frontend-react-ts/src/api/: AuthCognito.tsx  AuthContext.tsx  DynamoDb.tsx  IdPoolCognito.tsx  Invoke.tsx  ProtectedRoute.tsx  clients.tsx
frontend-react-ts/src/components/: BlogDisplay.tsx  ChatInterface.tsx  MessageBubble.tsx  MessageList.tsx  Sidebar.tsx
frontend-react-ts/src/hooks/: useChatManagement.ts  useSessionManagement.ts
frontend-react-ts/src/pages/: Callback.tsx  Dashboard.css  Dashboard.tsx  Login.css  Login.tsx
frontend-react-ts/src/types/: ChatTypes.tsx  loginTypes.tsx
frontend-react-ts/src/utils/: messageUtils.ts
