[project]
name = "research-agent-to-go"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-aws>=1.0.2",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.40.0",
]
